<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_frag"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/rl_bottom"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_below="@+id/include"
            android:background="@drawable/toolbar_dropshadow"
            android:visibility="visible" />

        <include
            layout="@layout/match_timer_info_new"
            android:visibility="visible"></include>

        <com.websinception.megastar.customView.CustomTextView
            android:id="@+id/ctv_description"
            style="@style/rippleStyleTransparent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/create_captain_description"
            android:textColor="@color/black"
            android:textSize="@dimen/textsize_regular"
            app:rd_enable="false"
            app:textAllCaps="true"
            app:textfont="@string/ASAP" />

        <com.websinception.megastar.customView.CustomTextView
            android:id="@+id/ctv_title"
            style="@style/rippleStyleTransparent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/create_captain_title"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="@dimen/_16sdp"
            android:textColor="@color/warm_grey"
            android:textSize="@dimen/textsize_small"
            app:rd_enable="false"
            app:textfont="@string/MONTSERRAT_REGULAR" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"

            android:layout_weight="1"
            tools:listitem="@layout/list_item_matches" />
    </LinearLayout>
    <RelativeLayout
        android:id="@+id/rl_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:padding="10dp"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

        <com.websinception.megastar.customView.CustomTextView
            android:id="@+id/ctv_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/login_form_edt_padding"
            android:background="@drawable/border_next_bg_white"
            android:text="@string/save_team"
            android:textColor="@color/white"
            android:textSize="@dimen/primary_txt_size"
            app:textAllCaps="true"
            app:rd_enable="true"
            app:textfont="@string/MONTSERRAT_REGULAR" />

    </RelativeLayout>

</RelativeLayout>
