<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <com.websinception.megastar.customView.CustomTextView
            android:id="@+id/ctv_close"
            style="@style/rippleStyleTransparent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:padding="12dp"
            android:text="@string/close"
            android:textColor="@color/white"
            android:textSize="@dimen/text_medium"
            app:rd_enable="true"
            app:textAllCaps="true"
            app:textfont="light" />

        <com.websinception.megastar.customView.CustomTextView
            style="@style/rippleStyleTransparent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:padding="12dp"
            android:text="@string/winnings_breakup"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/text_medium"
            app:rd_enable="false"
            app:textfont="@string/MONTSERRAT_BOLD" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical">

                <com.websinception.megastar.customView.CustomTextView
                    android:id="@+id/total_winning"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_10dp"
                    android:text="@string/price_pool"
                    android:textAlignment="center"
                    android:textColor="@color/textColor"
                    app:textfont="light" />

                <com.websinception.megastar.customView.CustomTextView
                    android:id="@+id/total_winningAmount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_5"
                    android:text="@string/total_winning"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/text_extra_large"
                    app:textfont="light" />


                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:padding="5dp"
                    tools:listitem="@layout/list_item_winnings" />


                <com.websinception.megastar.customView.CustomTextView
                    android:id="@+id/note"

                    style="@style/rippleStyleTransparent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_10dp"
                    android:layout_marginRight="@dimen/dimen_10dp"
                    android:layout_marginBottom="@dimen/dimen_10dp"
                    android:text="@string/note_winnings"
                    android:textColor="@color/warm_grey"
                    android:textSize="@dimen/text_very_small"
                    app:rd_enable="false" />


            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>
    </RelativeLayout>
</LinearLayout>