<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".UI.allContest.AllContest">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipeContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
      >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.CardView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_5dp"
                android:visibility="gone"
                app:cardCornerRadius="3dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/SkyBlueLight"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="@dimen/dimen_10dp"
                    android:weightSum="5">

                    <com.websinception.megastar.customView.CustomTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/sort"
                        android:textAllCaps="true"
                        android:textColor="@color/textColor"
                        android:textSize="@dimen/textsize_small"
                        app:textfont="@string/MONTSERRAT_REGULAR" />

                    <com.websinception.megastar.customView.CustomTextView
                        android:id="@+id/winnings"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/winnings"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                        android:textColor="@color/selected_text_blue"
                        android:textSize="11sp"
                        app:textfont="@string/MONTSERRAT_REGULAR" />

                    <com.websinception.megastar.customView.CustomTextView
                        android:id="@+id/teams"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/teams"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                        android:textColor="@color/unselected_text_blue"
                        android:textSize="11sp"
                        app:textfont="@string/MONTSERRAT_REGULAR" />

                    <com.websinception.megastar.customView.CustomTextView
                        android:id="@+id/winners"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/winners"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                        android:textColor="@color/unselected_text_blue"
                        android:textSize="11sp"
                        app:textfont="@string/MONTSERRAT_REGULAR" />

                    <com.websinception.megastar.customView.CustomTextView
                        android:id="@+id/entry"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/entry"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                        android:textColor="@color/unselected_text_blue"
                        android:textSize="11sp"
                        app:textfont="@string/MONTSERRAT_REGULAR" />

                </LinearLayout>

            </android.support.v7.widget.CardView>



    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:layout_marginBottom="@dimen/dimen_50dp"
        android:padding="@dimen/margin_5"/>
            <include
                layout="@layout/footer_layout"
                android:visibility="gone" />
        </LinearLayout>
    </android.support.v4.widget.SwipeRefreshLayout>

    <include
        layout="@layout/loader_layout"
        android:visibility="gone"
        />


    </RelativeLayout>

</LinearLayout>